--- a/ansible/roles/cassandra/templates/cassandra.yaml.j2
+++ b/ansible/roles/cassandra/templates/cassandra.yaml.j2
@@ -57,7 +57,7 @@ trickle_fsync_interval_in_kb: 10240
 storage_port: 7000
 ssl_storage_port: 7001
 {% if groups['cassandra-2'] is defined %}
-listen_address: {{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}
+listen_address: 127.0.0.1
 broadcast_address: {{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}
 broadcast_rpc_address: {{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}
 {% else %}
